[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/cowboy_boss/cowboy_boss-sheet.png" type="Texture" id=1]
[ext_resource path="res://assets/cowboy_boss/cowboy_boss-gun.png" type="Texture" id=2]
[ext_resource path="res://src/cowboyBoss/cowboyBoss.gd" type="Script" id=3]
[ext_resource path="res://assets/cowboy_boss/cowboy_boss-shadow.png" type="Texture" id=4]
[ext_resource path="res://src/cowboyBoss/AI.gd" type="Script" id=5]
[ext_resource path="res://src/components/BulletSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/cowboyBoss/Gun.gd" type="Script" id=7]

[sub_resource type="Animation" id=6]
resource_name = "shoot"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GunVisual:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.2, 2, 0.2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GunVisual:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.2, 2, 0.2 ),
"update": 0,
"values": [ -0.23585, -25.0, -0.23585 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 3 )

[sub_resource type="Animation" id=2]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun/GunVisual:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -1.73708, 1.00617 ]
}

[sub_resource type="Animation" id=5]
resource_name = "shoot"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Gun/GunVisual:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.2, 2, 0.2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun/GunVisual:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.2, 2, 0.2 ),
"update": 0,
"values": [ -0.23585, -25.0, -0.23585 ]
}

[sub_resource type="Animation" id=3]
length = 0.625
loop = true
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 140.409

[sub_resource type="CapsuleShape2D" id=7]
height = 11.0054

[node name="Cowboy" type="KinematicBody2D" groups=[
"character",
]]
collision_layer = 8
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 4 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
rotation = -0.000768945
texture = ExtResource( 1 )
hframes = 5
vframes = 2

[node name="Gun" type="Node2D" parent="."]
position = Vector2( 5, -4 )
script = ExtResource( 7 )

[node name="GunVisual" type="Node2D" parent="Gun"]
rotation = -0.00411636

[node name="GunSprite" type="Sprite" parent="Gun/GunVisual"]
texture = ExtResource( 2 )
offset = Vector2( 6.37683, -1.0217 )

[node name="BulletSpawner" parent="Gun" instance=ExtResource( 6 )]
position = Vector2( 18, -4.75 )
rotation = -0.00839695
bullet_emitter = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gun"]
anims/shoot = SubResource( 6 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/shoot = SubResource( 5 )
anims/walk = SubResource( 3 )

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="DetectionArea" type="Area2D" parent="AI"]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/DetectionArea"]
shape = SubResource( 4 )

[node name="MoveTimer" type="Timer" parent="AI"]
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=[
"hitbox",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 1.11362, -10.134 )
shape = SubResource( 7 )

[connection signal="body_entered" from="AI/DetectionArea" to="AI" method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="AI/DetectionArea" to="AI" method="_on_DetectionArea_body_exited"]
[connection signal="timeout" from="AI/MoveTimer" to="AI" method="_on_MoveTimer_timeout"]
